--- a/canvas情怀.html
+++ b/canvas情怀.html
@@ -10,7 +10,7 @@
 		</style>
 	</head>
 	<body>
-		<canvas id="mycanvas" width="" height=""></canvas>
+		<canvas id="mycanvas"></canvas>
 	</body>
 	<script type="text/javascript">
 		window.onload = function(){
